--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@rails/webpacker": "5.4.4",
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
+    "rails_admin": "3.1.2",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
@@ -19,5 +20,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "webpack-dev-server": "^3"
+  },
+  "resolutions": {
+    "rails_admin/@fortawesome/fontawesome-free": "^5.15.0"
   }
 }
