admin_userの環境変数を設定

--- a/db/seed/admin_users.yml
+++ b/db/seed/admin_users.yml
@@ -1,4 +1,4 @@
 -
   id: 1
-  email: admin@mydomain
-  password: changepassword
+  email: <%= ENV['ADMIN_EMAIL'] %>
+  password: <%= ENV['ADMIN_PASSWORD'] %>
