shimをパーシャル化

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,6 +1,6 @@
 development:
-  admin_email: 'admin@mydomain'
-  admin_password: 'changepassword'
+  admin_email: admin@mydomain
+  admin_password: changepassword
 
 production:
   admin_email: <%= ENV['ADMIN_EMAIL'] %>
