--- a/db/seed/admin_users.yml
+++ b/db/seed/admin_users.yml
@@ -1,4 +1,4 @@
 -
   id: 1
-  email: <%= ENV['ADMIN_EMAIL'] %>
-  password: <%= ENV['ADMIN_PASSWORD'] %>
+  email: admin@mydomain
+  password: changepassword
