--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "myapp",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.22.9",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.22.9",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@popperjs/core": "^2.11.8",
     "@rails/actioncable": "^6.0.0",
@@ -19,6 +21,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "babel-loader": "^8.3.0",
     "webpack-dev-server": "^3"
   },
   "resolutions": {
