--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,12 @@
 inherit_from:
   - .rubocop_airbnb.yml
 
+LineLength:
+  Max: 130
+
+Airbnb/OptArgParameters:
+  Enabled: false
+
 AllCops:
   Exclude:
     - 'db/**/*'
