--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,6 +5,5 @@ test:
   adapter: test
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  adapter: async
   channel_prefix: myapp_production
